--- a/client/src/Authentication/Login/Login.scss
+++ b/client/src/Authentication/Login/Login.scss
@@ -309,11 +309,12 @@
                   margin: auto;
                 }
                 .forgot_password {
-                  width: 80%;
+                  width: 100%;
                   display: flex;
                   align-items: center;
                   justify-content: flex-end;
                   padding: 1rem 0px;
+   
         
                   a {
                     text-decoration: none;
@@ -324,6 +325,9 @@
                       font-weight: 500;
                       letter-spacing: 1px;
                     }
+                  }
+                  @media  screen and (max-width:600px) {
+                 margin-left: 3.5rem;
                   }
                 }
                 .form_submit {
