--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Select_Template.scss
@@ -11,10 +11,7 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
-      width: 100%;
-    
- 
-  
+      width: 100%; 
    h6{
  font-size: 0.8rem;
  font-weight: bolder;
@@ -28,7 +25,7 @@
     padding: 5px 1rem;
     background: royalblue;
     color: #ffff;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
 
     &:hover{
       box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
@@ -40,9 +37,6 @@
       height: auto;
       margin: 0.5rem 0rem 4rem 0rem;
       overflow: hidden;
-  
-  
-  
       .image_container {
         display: grid;
         width: 100%;
@@ -51,9 +45,7 @@
         grid-row-gap: 2rem;
         grid-column-gap: 1rem;
         margin-bottom: 2rem;
-    
         // place-items: center;
-  
         .image {
           width: 100% !important;
           height: 500px;
@@ -63,22 +55,25 @@
           border-radius: 0.5rem;
           overflow-y: scroll;
         padding: 0px;
-          border: 1px solid rgb(214, 214, 214);
+          border: 1px solid rgb(152, 226, 255);
           opacity: 1;
           transition: all 0.2s ease-in-out;
           scroll-behavior: smooth;
-
           .selected_gif{
             position: absolute;
             right: 2%;
             top: 5%;
             z-index: 800;
-
             img{
               width: 20px;
               height: 20px;
-              mix-blend-mode: multiply;
-              filter: brightness(100%);
+              mix-blend-mode: multiply !important;
+          border-radius: 5px;
+            }
+            small{
+              color: #fff;
+              font-weight: 550;
+              font-size: 0.8rem;
             }
           }
           .touch_hand{
@@ -389,24 +384,21 @@
   #templateSelected{
     width: 100%;
     // background-color: rgb(108, 243, 137) !important;
-    border: 2px solid rgb(240, 240, 240);
+    border: 2px solid rgb(188, 172, 255);
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.4);
     opacity: 1;
   }
 
-  #templateUnselected{
-   opacity: 0.7;
-   cursor:not-allowed;
-   display: none;
-   border: none;
-   
-  }
+
 
   #selected{
    display: block !important;
+
   }
 
   #saved{
     display: block !important;
+
   }
   #unsaved{
     display: block !important;
@@ -414,9 +406,11 @@
   }
 #unselected{
   display: block !important;
+ 
 }
   #savedTemplate{
     display: block !important;
+
   }
   #UnsavedTemplate{
  opacity: 0;
